# akl-py-ws

./: .gitignore  Dockerfile  README.md  buildws.sh  nginx.conf  startws.sh
etc/nginx/: nginx.conf
go/: data.go  go.mod  go.sum  main.go
go/genkey/: config.go  config.toml  generate.go  globals.go  interactive.go  layout.go  main.go  text.go  (+1 more)
python/: db.sqlite3  requirements.txt
rust/: Cargo.toml
rust/src/: main.rs  oxeylyzer.rs
rust/src/oxeylyzer/: .gitignore  Cargo.toml  README.md  languages_default.cfg
rust/src/oxeylyzer/oxeylyzer-core/: Cargo.toml  config.toml
rust/src/oxeylyzer/oxeylyzer-core/src/: generate.rs  languages_cfg.rs  layout.rs  load_text.rs  weights.rs
rust/src/oxeylyzer/oxeylyzer-core/src/generate/: desshaw.rs  iterative.rs
rust/src/oxeylyzer/oxeylyzer-repl/: Cargo.toml  languages_default.cfg
rust/src/oxeylyzer/oxeylyzer-repl/src/: commands.rs  corpus_transposition.rs  repl.rs  tui.rs
rust/src/oxeylyzer/oxeylyzer-ws/: Cargo.toml
rust/src/oxeylyzer/oxeylyzer-ws/src/: lib.rs  messages.rs  sender.rs  websocket.rs
rust/src/oxeylyzer/static/corpus_configs/provided/: albanian.toml  bokmal.toml  czech.toml  dutch.toml  dutch_repeat.toml  english_repeat.toml  english_th.toml  esperanto.toml  finnish.toml  finnish_repeat.toml  french.toml  german.toml  hungarian.toml  italian.toml  korean.toml  polish.toml  russian.toml  spanish.toml  swedish.toml  swiss.toml  ukranian.toml  welsh.toml  welsh_pure.toml
rust/src/oxeylyzer/static/language_data/: ger-en60-40.json  pol-en50-50.json
templates/: bad_gateway.html  bad_request.html  ok.html
(+1575 files in other folders)
